[gd_scene load_steps=8 format=3 uid="uid://d3o7riajla512"]

[ext_resource type="PackedScene" uid="uid://cr05xakri7lnw" path="res://world/floor/floor_gen.tscn" id="1_plfsl"]
[ext_resource type="Texture2D" uid="uid://cjbsq7rk6r3h4" path="res://temp_art/gartic/cactus.png" id="2_p5u37"]
[ext_resource type="Texture2D" uid="uid://sxaysn4gqoxo" path="res://temp_art/gartic/coin.png" id="3_p5u37"]
[ext_resource type="PackedScene" uid="uid://dxdkwdigtcn43" path="res://world/enemy/test/enemy_test.tscn" id="4_wceyb"]
[ext_resource type="PackedScene" uid="uid://nuqmhgq1e2lu" path="res://world/player/player.tscn" id="5_plfsl"]
[ext_resource type="Script" uid="uid://dybwgis0t4n8o" path="res://world/Pause Menu/PauseMenu.gd" id="6_0u0ns"]

[sub_resource type="Curve3D" id="Curve3D_plfsl"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -8, 0, -4, 0, 0, 0, 0, 0, 0, 18, 0, -4, 0, 0, 0, 0, 0, 0, 18, 0, 6, 0, 0, 0, 0, 0, 0, -8, 0, 6),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="ExampleScene" type="Node3D"]

[node name="World" type="Node3D" parent="."]

[node name="Floor" parent="World" instance=ExtResource("1_plfsl")]
curve = SubResource("Curve3D_plfsl")

[node name="Cactus" type="Sprite3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -6.08085, 1.35212, -2.54946)
texture = ExtResource("2_p5u37")

[node name="Cactus2" type="Sprite3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 4.52835, 1.35212, 2.91099)
texture = ExtResource("2_p5u37")

[node name="Cactus3" type="Sprite3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 14.5163, 1.35212, -2.19461)
texture = ExtResource("2_p5u37")

[node name="Coin" type="Sprite3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 11.5831, 1.00557, 0.341141)
texture = ExtResource("3_p5u37")

[node name="EnemyTest" parent="." instance=ExtResource("4_wceyb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.249423, 4.7683716e-07, -2.0285115)
script = null

[node name="Player" parent="." instance=ExtResource("5_plfsl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.53553, 4.7683716e-07, 0.9444761)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.92473876, -0.25272667, 0.28458285, 0, 0.74771696, 0.66401756, -0.3806024, -0.61404276, 0.69144285, 0, 0, 0)

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_0u0ns")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 0
offset_left = -213.0
offset_top = -182.0
offset_right = 243.0
offset_bottom = 170.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GAME PAUSED" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="OptionsButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="QuitToMenuButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "QUIT TO MENU"

[node name="CloseGameButton" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "CLOSE GAME"
